# zmanim-mcp-server

./: README.md  pyproject.toml  server.json
.github/workflows/: publish.yaml
src/zmanim_mcp/: __init__.py  server.py
